fix(combobox): high contrast css popup border (#4912) * add a real border to combobox popup rather than box-shadow for high contrast

--- a/src/components/combobox/combobox.scss
+++ b/src/components/combobox/combobox.scss
@@ -52,12 +52,6 @@
   @apply cursor-pointer flex-nowrap;
 }
 
-@media (forced-colors: active) {
-  .wrapper {
-    border: 1px solid canvasText;
-  }
-}
-
 .grid-input {
   @apply flex
     flex-grow
@@ -155,6 +149,13 @@
 
 .popper-container--active {
   @include popperWrapperActive();
+}
+
+@media (forced-colors: active) {
+  .wrapper,
+  .popper-container--active {
+    border: 1px solid canvasText;
+  }
 }
 
 .screen-readers-only {
